@@ -25,10 +25,12 @@ import java.nio.ByteBuffer;
 import org.apache.cassandra.db.marshal.AbstractType;
 import org.apache.cassandra.utils.ByteBufferUtil;
 
+import org.apache.cassandra.cql3.statements.Selector;
+
 /**
  * Represents an identifer for a CQL column definition.
  */
-public class ColumnIdentifier implements Comparable<ColumnIdentifier>
+public class ColumnIdentifier implements Comparable<ColumnIdentifier>, Selector
 {
     public final ByteBuffer key;
     private final String text;
@@ -69,5 +71,20 @@ public class ColumnIdentifier implements Comparable<ColumnIdentifier>
     public int compareTo(ColumnIdentifier other)
     {
         return key.compareTo(other.key);
+    }
+
+    public ColumnIdentifier id()
+    {
+        return this;
+    }
+
+    public boolean hasFunction()
+    {
+        return false;
+    }
+
+    public Selector.Function function()
+    {
+        return null;
     }
 }
