@@ -179,14 +179,21 @@ selectStatement returns [SelectStatement.RawStatement expr]
       }
     ;
 
-selectClause returns [List<ColumnIdentifier> expr]
-    : ids=cidentList { $expr = ids; }
-    | '\*'           { $expr = Collections.<ColumnIdentifier>emptyList();}
+selectClause returns [List<Selector> expr]
+    : t1=selector { $expr = new ArrayList<Selector>(); $expr.add(t1); } (',' tN=selector { $expr.add(tN); })*
+    | '\*' { $expr = Collections.<Selector>emptyList();}
     ;
 
-selectCountClause returns [List<ColumnIdentifier> expr]
-    : c=selectClause { $expr = c; }
-    | i=INTEGER      { if (!i.getText().equals("1")) addRecognitionError("Only COUNT(1) is supported, got COUNT(" + i.getText() + ")"); $expr = Collections.<ColumnIdentifier>emptyList();}
+selector returns [Selector s]
+    : c=cident             { $s = c; }
+    | K_WRITETIME '(' c=cident ')' { $s = new Selector.WithFunction(c, Selector.Function.WRITE_TIME); }
+    | K_TTL '(' c=cident ')'       { $s = new Selector.WithFunction(c, Selector.Function.TTL); }
+    ;
+
+selectCountClause returns [List<Selector> expr]
+    : ids=cidentList { $expr = new ArrayList<Selector>(ids); }
+    | '\*'           { $expr = Collections.<Selector>emptyList();}
+    | i=INTEGER      { if (!i.getText().equals("1")) addRecognitionError("Only COUNT(1) is supported, got COUNT(" + i.getText() + ")"); $expr = Collections.<Selector>emptyList();}
     ;
 
 whereClause returns [List<Relation> clause]
@@ -547,6 +554,7 @@ unreserved_keyword returns [String str]
         | K_STORAGE
         | K_TYPE
         | K_VALUES
+        | K_WRITETIME
         ) { $str = $k.text; }
     | t=native_type { $str = t; }
     ;
@@ -622,6 +630,7 @@ K_VARCHAR:     V A R C H A R;
 K_VARINT:      V A R I N T;
 K_TIMEUUID:    T I M E U U I D;
 K_TOKEN:       T O K E N;
+K_WRITETIME:   W R I T E T I M E;
 
 // Case-insensitive alpha characters
 fragment A: ('a'|'A');
